Fix clipping of logo

--- a/assets/style.css
+++ b/assets/style.css
@@ -256,7 +256,7 @@ li .icon.email {
     }
 
     header #logo {
-        height: 10.03125rem;
+        height: 10.05rem;
         -webkit-mask-size: 16rem;
         mask-size: 16rem;
         -webkit-mask-position: 0 0;
